fix: 🐛 💄 Fix icon size too big in user profile menu

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -57,5 +57,5 @@ main > div:first-of-type {
     border-radius: 50%;
     width: 150px;
     height: 150px;
-    font-size: 200px;
+    font-size: 150px;
 }
